# english-coach

./: .env.example  .gitignore  .mailmap  LICENSE  README.md  README.txt  README_OPENSOURCE.md  README_v2.0.txt  SECURITY.md  build.py  build_cloud.py  build_opensource.py  english_coach.spec  license_keygen.py  package_dual_editions.py  package_release.py  pyproject.toml  send_key.py  test_coach_contract.py  test_gui_smoke.py  test_license_security.py  test_quality_contract.py  快速参考.md  操作中心.pyw
ai/: client.py  question_distribution.py  question_generators.py  reading_question_generators.py  tts.py
cli/: app.py  display.py
commercial/: README.md  __init__.py
content/: pack_registry.json
docs/: Git纳管清单.md  coach-memory-heartbeat-plan.md  coach-review-policy-architecture.md  操作速查.md
gui/: cloud_license_defaults.py  coach_runtime.py  deps.py  license.py  main.py  server.py  version.py
modes/: anki_export.py  chat.py  grammar.py  lookup.py  mock_exam.py  notebook.py  packs.py  plan.py  reading.py  speaking.py  users.py  vocab.py  words.py  writing.py
private_commercial/: README.md
release_tooling/: __init__.py  build_cloud.py  build_opensource.py  config.release.yaml
scripts/: AI_SMOKE_PATHS_DESIGN.md  build_professional_vocab_books.py  check_cloud_activation.py  enrich_vocabulary.py  generate_listening_content.py  generate_reading_passages.py  generate_vocab_professional.py  migrate_database.py  smoke_test_release.py  sync_release_docs.py  validate_content.py  vocab_template_generator.py
tests/: test_chat_contract.py  test_coach_contract.py  (+7 more)
(+166 files in other folders)
